feat: Use bouncycastle to generate certificates
# Conflicts:
#	gradle/libs.versions.toml

diff --git c/build.gradle.kts i/build.gradle.kts
index 34a79bc57..f79dcb1aa 100644
--- c/build.gradle.kts
+++ i/build.gradle.kts
@@ -106,6 +106,7 @@ dependencies {
   testImplementation(libs.mockito.core)
   testImplementation(libs.mockito.junit.jupiter)
   testImplementation(libs.scala.library)
+  testImplementation(libs.bouncycastle.bcpkix)

   testRuntimeOnly(files("src/test/resources/classpath file source/classpathfiles.zip", "src/test/resources/classpath-filesource.jar"))
   testRuntimeOnly(files("test-extension/test-extension.jar"))
@@ -385,7 +386,6 @@ eclipse.classpath.file {
       .filter { it.path.contains("JRE_CONTAINER") }
       .forEach {
         it.entryAttributes["module"] = true
-        it.entryAttributes["add-exports"] = "java.base/sun.security.x509=ALL-UNNAMED"
       }
   }
 }
diff --git c/buildSrc/build.gradle.kts i/buildSrc/build.gradle.kts
index 0477e8121..c21037421 100644
--- c/buildSrc/build.gradle.kts
+++ i/buildSrc/build.gradle.kts
@@ -11,7 +11,7 @@ repositories {

 dependencies {
   implementation("com.diffplug.gradle.spotless:com.diffplug.gradle.spotless.gradle.plugin:6.25.0")
-  implementation("com.github.johnrengelman.shadow:com.github.johnrengelman.shadow.gradle.plugin:8.1.1")
+  implementation("com.gradleup.shadow:com.gradleup.shadow.gradle.plugin:8.3.10")
   implementation("org.sonarqube:org.sonarqube.gradle.plugin:6.2.0.5505")
   implementation("com.vanniktech.maven.publish.base:com.vanniktech.maven.publish.base.gradle.plugin:0.35.0")
 }
diff --git c/buildSrc/src/main/kotlin/wiremock.common-conventions.gradle.kts i/buildSrc/src/main/kotlin/wiremock.common-conventions.gradle.kts
index 4d3a73620..26f52ba48 100644
--- c/buildSrc/src/main/kotlin/wiremock.common-conventions.gradle.kts
+++ i/buildSrc/src/main/kotlin/wiremock.common-conventions.gradle.kts
@@ -9,7 +9,7 @@ plugins {
   signing
   `maven-publish`
   id("com.diffplug.spotless")
-  id("